--- a/알고리즘 13주차.md
+++ b/알고리즘 13주차.md
@@ -175,6 +175,10 @@ i에서 j까지의 최단 경로가 정점 k를 지나지 않는다면 k-1까지
 
 ## 플로이드-워샬 알고리즘
 
+**시간 복잡도: Θ(|V|3)**
+
+**문제의총 수 Θ(|V|3), 각 문제의 계산에 Θ(1)**
+
 ```ruby
 FloydWarshall(G)                             ▷ 시작 상황: 입력으로 주어진 가중치 그래프 G = (V, E)가 있음
 {
@@ -191,6 +195,9 @@ FloydWarshall(G)                             ▷ 시작 상황: 입력으로 주
 }
 ```
 
+해당 알고리즘을 보면 k = 1일 때 부터(k=1일 때 정점 1을 거친다는 의미) 시작하여 i->j로 이동할 때 정점 1을 거쳐서 가는 거리와 거치지 않고 간 거리 중 짧은 값을 최단 거리로 선택한다 
+
+그 후 k = 2 일때는 k = 1에서 구한 최단 경로를 이용하여 정점 1과 정점 2을 거쳤을 때의 최단 경로를 구하는 방식이다 
 
 
 
