--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -1,1 +1,117 @@
 ## 그리디(Greedy) 알고리즘 
+
+**그리디 알고리즘(Greedy algorithm)** : 이름처럼 **눈앞의 이익만 취하고 보는 알고리즘**을 뜻함
+
+**전체적으로 봤을 때 최적이라고 보장하진 않지만**, 현재 시점에서 **가장 이득인 것으로 보이는 해를 선택**하는 행위를 반복한다
+
+많은 경우에 그리디 방식은 **최적해를 보장하지 못하지만**, 드물게 최적해가 보장되는 경우가 존재
+
+<br/>
+
+## 의사코드 
+
+```ruby
+do {
+    우선 가장 좋아 보이는 선택을 한다
+} until (해 구성 완료)
+```
+
+<br/>
+
+## 그리디(Greedy) 알고리즘 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
