--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -4,6 +4,8 @@
 
 **전체적으로 봤을 때 최적이라고 보장하진 않지만**, 현재 시점에서 **가장 이득인 것으로 보이는 해를 선택**하는 행위를 반복한다
 
+ex: 현 시점에서 10만원을 얻을 수 있고 다음 step에서 1억을 얻을 수 있더라도, 현재 시점에서는 10만원을 받는게 좋기 때문에 10만원을 선택함 
+
 많은 경우에 그리디 방식은 **최적해를 보장하지 못하지만**, 드물게 최적해가 보장되는 경우가 존재
 
 <br/>
