--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -22,9 +22,42 @@ do {
 
 ## 그리디(Greedy) 알고리즘 
 
+```ruby
+Greedy(C)                      ▷ 입력: C는 원소들의 전체 집합
+{
+    S ← ∅;                    ▷ 초기 해답 집합 S는 비어 있는 상태로 시작
+    
+    while (C ≠ ∅ and S는 아직 온전한 해가 아님) {
+        x ← C에서 가장 좋아 보이는 원소;    ▷ 현재 시점에서 가장 좋아 보이는 원소 x를 선택
+        집합 C에서 x 제거;                  ▷ 선택한 원소 x를 후보 집합 C에서 제거 (중복 방지)
+        
+        if (S에 x를 더해도 됨)              ▷ x를 S에 넣어도 문제 조건을 만족한다면
+            then S ← S ∪ {x};              ▷ S에 x를 추가
+    }
 
+    if (S가 온전한 해임)                    ▷ S가 문제의 해를 만족하면
+        then return S;                      ▷ 해답 S를 반환
+    else 
+        return "no solution!";              ▷ 조건을 만족하는 해를 못 만들었다면 실패 메시지 반환
+}
+```
 
+<br/>
 
+위 알고리즘에서 아래 부분을 살펴보자 
+
+```ruby
+if (S에 x를 더해도 됨)              ▷ x를 S에 넣어도 문제 조건을 만족한다면
+    then S ← S ∪ {x};              ▷ S에 x를 추가
+```
+
+해당 부분은 예를 들어 C 안의 숫자들 중에서 일부를 골라서, 합이 정확히 특정 값 T가 되도록 만들어야하는 문제가 주어질 때, 다음을 가정하자
+
+- S는 지금까지 선택한 수들의 집합
+
+- x는 지금 보려는 숫자
+
+만약 S에 x를 더했을 때, 특정 값 T보다 작다면, if문을 만족한다는 의미 
 
 
 
