--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -145,6 +145,8 @@ Prim(G, r)
 
 아래 예시를 함께 보자 
 
+각 활동 𝑎𝑖의 index가 종료시간 순서에 맞게 매겨져 있다고 가정한다 
+
 ![IMG_3344](https://github.com/user-attachments/assets/3241ed15-df96-49df-ac1f-9da6f19e6984)
 
 
