--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -12,6 +12,14 @@ ex: 현 시점에서 10만원을 얻을 수 있고 다음 step에서 1억을 얻
 
 <br/>
 
+## 그리디 알고리즘 조건 
+
+1. **최적 부분 구조** : 그리디 알고리즘도 현재 가장 좋은 값을 탐색하다 보면 **언젠간 마지막의 답이 존재해야함**
+
+2. **탐욕 선택 속성** : 현재 선택이 **전체 최적해에 포함된다는 보장**이 있어야 함
+
+<br/>
+
 ## 의사코드 
 
 ```ruby
@@ -145,11 +153,19 @@ Prim(G, r)
 
 아래 예시를 함께 보자 
 
-각 활동 𝑎𝑖의 index가 종료시간 순서에 맞게 매겨져 있다고 가정한다 
+각 활동 𝑎𝑖의 index가 종료시간 순서에 맞게 매겨져 있다고 가정한다 또한, 시간에 따른 표 이므로 i가 커질수록 종료 시간이 더 늦어진다 
 
 ![IMG_3344](https://github.com/user-attachments/assets/3241ed15-df96-49df-ac1f-9da6f19e6984)
 
+<br/>
 
+Activity-selection problem를 그리디로 풀 수 있는지 확인하려면 **이 문제가 최적 부분 구조를 가지는지 먼저 봐야 한다**
+
+이를 위해 다음을 가정하자 
+
+-  S_ij : ai가 끝나고 aj가 시작되기 전까지 가능한 활동들의 집합, 즉, 시간 범위 (ai 끝나는 시간, aj 시작하는 시간) 사이에 실행 가능한 활동들
+
+-   A_ij : 위의 S_ij에 대해 선택할 수 있는 최적의 활동 집합, 즉, ai와 aj 사이 시간 동안 넣을 수 있는 최대 활동 수의 조합
 
 
 
