--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -203,10 +203,56 @@ RECURSIVE-ACTIVITY-SELECTOR(s, f, k, n)
 }
 ```
 
+<br/>
+
+## 그리디 알고리즘 작동 예시 
+
+위 그리디 알고리즘이 어떻게 작동하는지 알아보자 
+
+![image](https://github.com/user-attachments/assets/40885ec5-ff9d-46f6-adba-37935998255a)
+
+**1. RECURSIVE-ACTIVITY-SELECTOR(s, f, 0, 11)**
+
+- k = 0, 즉 기준 활동은 없음. 현재 시간은 f[0] = 0
+
+- m = 1 → s[1] = 1 ≥ 0 → 선택 가능 → a1 선택
+
+- 다음 호출: RECURSIVE-ACTIVITY-SELECTOR(s, f, 1, 11)
+
+<br/>
+
+**2. RECURSIVE-ACTIVITY-SELECTOR(s, f, 1, 11)**
+
+- 기준 활동: a1, f[1] = 4
+
+- m = 2 → s[2] = 3 < 4 → 겹침 → skip
+
+- m = 3 → s[3] = 0 < 4 → 겹침 → skip
+
+- m = 4 → s[4] = 5 ≥ 4 → 선택 가능 → a4 선택
+
+- 다음 호출: RECURSIVE-ACTIVITY-SELECTOR(s, f, 4, 11)
 
 
+<br/>
 
+**3. RECURSIVE-ACTIVITY-SELECTOR(s, f, 4, 11)**
 
+- 기준 활동: a4, f[4] = 7
+
+- m = 5 → s[5] = 3 < 7 → 겹침 → skip
+
+- m = 6 → s[6] = 5 < 7 → 겹침 → skip
+
+- m = 7 → s[7] = 6 < 7 → 겹침 → skip
+
+- m = 8 → s[8] = 8 ≥ 7 → 선택 가능 → a8 선택
+
+- 다음 호출: RECURSIVE-ACTIVITY-SELECTOR(s, f, 8, 11)
+
+<br/>
+
+위와 같은 방식으로 진행되어 최종적인 집합을 반환한다
 
 
 
