--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -254,7 +254,28 @@ RECURSIVE-ACTIVITY-SELECTOR(s, f, k, n)
 
 위와 같은 방식으로 진행되어 최종적인 집합을 반환한다
 
+<br/>
 
+**그림을 통한 예시**
+
+![image](https://github.com/user-attachments/assets/2584dc06-a5c0-456b-b489-9c93fa40b89e)
+
+<br/>
+
+## 반복 형태의 그리디 알고리즘 구현 
+
+```ruby
+GREEDY-ACTIVITY-SELECTOR(s, f, n)
+{
+    A = {a₁}
+    k = 1
+    for m = 2 to n
+        if s[m] ≥ f[k]       // is aₘ in Sₖ?
+            A = A ∪ {aₘ}     // yes, so choose it
+            k = m            // and continue from there
+    return A
+}
+```
 
 
 
