--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -1,1 +1,143 @@
-## 123
+## NP 완비 
+
+### 개념 정리 
+
+**Class P** : 다항식 시간 내에 답을 찾을 수 있는 문제들의 집합 (알고리즘 파트에서 지금까지 다루어 온 많은 문제들이 여기에 속함)
+
+**Class NP** : NP란 Nondeterministic Polynomial의 줄임말로써 (non p가 아님), 해당 의미를 설명하기엔 복잡하나 **해답이 주어진 경우 다항식 시간 이내에 검증 가능한 문제**로 볼 수 있음
+
+Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 두 군의 포함관계가 정확히 어떤지 증명된 바는 없음** 다만, 경험적으로 **대부분 P에 속하지 않는 NP 문제들이 있다고 추정 중**
+
+![image](https://github.com/user-attachments/assets/9ae6e05e-fda7-4c8e-abfd-5d68aaadac5a)
+
+<br/>
+
+## 문제의 종류 
+
+### 해당 파트는 난해한 개념이 많음을 유의 
+
+풀 수 있는 문제들은 **현실적인 시간** 복잡도 내에 풀 수 있는지, 아닌지 여부에 따라 나뉨
+
+![image](https://github.com/user-attachments/assets/d372a899-6dd1-4c1b-ab05-aa8272225607)
+
+- 현실적인 시간 안에 풀 수 있음 → P 문제
+
+- 현실적으로는 너무 오래 걸려서 못 풂 → NP-완비 문제 등
+
+<br/>
+
+여기서 **현실적인 시간 복잡도**라고 설정하는 기준은 **다항식 복잡도(다항식 시간에 푸는 것)를 기준**으로 함
+
+![image](https://github.com/user-attachments/assets/862f5703-bf0f-4fdf-9517-55f94aee5e2d)
+
+지수 복잡도 및 계승 복잡도 등의 다항식 복잡도를 초과하는 경우에는 **비현실적인 시간 복잡도로 간주함** (ex:  2ⁿ이나 n!는 현실적이지 않음)
+
+만약, 다항식 복잡도라고 해도 n¹⁰⁰과 같이 너무 크면 실제로 사용하기 힘든 시간 복잡도지만 일반적으로는 차수가 높아도 n⁶을 넘는 경우가 드물기 때문에 다항식 복잡도를 현실적인 시간 복잡도 기준으로 잡는다고 생각하면 됨
+
+<br/>
+
+## 결정 문제 및 최적화 문제
+
+컴퓨터 과학에서 다루는 문제의 종류는 크게 **결정 문제**와 **최적화 문제**로 구분할 수 있음
+
+**결정 문제** : 결과가 Yes/No로 나오는 문제 (ex: n개의 지점을 모두 방문하고 돌아오는 거리 K 이하의 경로가 존재하는가?)
+
+**최적화 문제** : 결과가 가능한 출력들 중 가장 좋은 해로 나오는 문제 (ex: n개의 지점을 모두 방문하고 돌아오는 최단 거리를 구하라)
+
+<br/>
+
+**NP-완비 이론**은 결정 문제만 다루지만, 최적화 문제는 NP-완비 이론 적용을 위해 그에 해당하는 결정 문제로 미리 변환 가능함
+
+쉽게 말해 NP-완비 이론은 예/아니오 문제만 다루지만, 최적화 문제도 예/아니오 문제로 바꿔서 NP-완비 이론을 적용할 수 있다는 의미
+
+<br/>
+
+## 다항식 시간 변환
+
+문제 A는 쉬운(다항식 시간 안에 풀 수 있는) 상황일 때, 다항식 시간 안에 A로부터 변환(reduction)할 수 있는 문제 B가 있다고 가정하자 
+
+쉽게 말해, 문제 A는 빨리 풀 수 있다고 가정하고, 문제 A를 어떤 방법으로 문제 B로 바꿀 수 있다고 하자
+
+**예시**
+
+![image](https://github.com/user-attachments/assets/30bcedbb-7670-4c41-a3a6-169b188b79b8)
+
+즉, B의 결과가 Yes/No일 때 문제 A에서도 같은 결과가 나오는 상황이다 
+
+그러면 만약 문제 B를 다항식 시간 내에 풀 수 있다면, 문제 변환 시간도 다항식 시간 내에 가능하므로 문제 A 또한 다항식 시간 내에 풀 수 있는(쉬운) 문제이다
+
+이것을 공식으로 살펴보자 
+
+![IMG_3362](https://github.com/user-attachments/assets/de02f442-ad10-4448-81a6-f0ae15356374)
+
+## 수업시간 내용 : NP 하드 문제에서는 NP가 아닌 문제가 존재, 하지만 이것은 P는 아님 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
