--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -70,6 +70,10 @@ Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 
 
 ![IMG_3362](https://github.com/user-attachments/assets/de02f442-ad10-4448-81a6-f0ae15356374)
 
+<br/>
+
+만약 어느 정도 어려운지 모르는 문제 B가 있다고 하면, 유명한 난제군인 NP-완비군에 속하는 문제를 문제 A로 놓고 A를 B로 변환할 수 있다면, 문제 B는 NP-하드라는 굉장히 어려운 문제군에 속함 (NP 하드 개념은 아래에 있음)
+
 ## 수업시간 내용 : NP 하드 문제에서는 NP가 아닌 문제가 존재, 하지만 이것은 P는 아님 
 
 
