--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -76,12 +76,15 @@ Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 
 
 ## 수업시간 내용 : NP 하드 문제에서는 NP가 아닌 문제가 존재, 하지만 이것은 P는 아님 
 
+<br/>
 
+## NP 완비
 
+**NP-완비 문제** : 효율적으로 정답을 찾을 수 있는 알고리즘을 발견할 수 없는 문제라고 봐도 무방하다 
 
+따라서, NP-완비 문제에 대해 최적해를 구하기 위한 효율적인 알고리즘을 구상하는 것은 현재까지 알려지기로는 시간만 허비하는 행동에 가까우며 일반적으로는 **최적해에 가까운 해**를 효율적으로 근사하는 알고리즘을 개발하는데 중점을 둠
 
-
-
+쉽게 말해, NP-완비 문제를 완벽하게 푸는 알고리즘을 찾으려 하기보단, **정답에 가까운 괜찮은 해답**을 빠르게 구하는 **근사 알고리즘**을 만드는 데에 집중한다는 의미이다
 
 
 
