--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -86,11 +86,13 @@ Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 
 
 쉽게 말해, NP-완비 문제를 완벽하게 푸는 알고리즘을 찾으려 하기보단, **정답에 가까운 괜찮은 해답**을 빠르게 구하는 **근사 알고리즘**을 만드는 데에 집중한다는 의미이다
 
+<br/>
 
+다음은 NP 완비를 이해하기 위한 쉬운 예시이다 
 
+![image](https://github.com/user-attachments/assets/89cd818a-1665-4e8b-9c5a-926ef30b8942)
 
-
-
+## p.14
 
 
 
