--- a/알고리즘 13주차.md
+++ b/알고리즘 13주차.md
@@ -199,7 +199,23 @@ FloydWarshall(G)                             ▷ 시작 상황: 입력으로 주
 
 그 후 k = 2 일때는 k = 1에서 구한 최단 경로를 이용하여 정점 1과 정점 2을 거쳤을 때의 최단 경로를 구하는 방식이다 
 
-### p.17부터 공부 
+### 사이클이 없는 그래프의 최단 경로
+
+```ruby
+DAG-ShortestPath(G, r) 
+{ 
+    for each u∈V
+        du ← ∞;
+    dr ← 0;
+    G의 정점들을 위상정렬한다;
+    for each u∈V (위상정렬 순서로)
+        for each v∈L(u) ▷ L(u) : 정점 u로부터 연결된 정점들의 집합
+            if (du + wu,v<dv ) then {
+                    dv ← du + wu,v ;
+                    prev[v] ← u
+            }
+ } 
+```
 
 
 
