--- a/알고리즘 13주차.md
+++ b/알고리즘 13주차.md
@@ -204,15 +204,16 @@ FloydWarshall(G)                             ▷ 시작 상황: 입력으로 주
 ```ruby
 DAG-ShortestPath(G, r) 
 { 
-    for each u∈V
-        du ← ∞;
-    dr ← 0;
-    G의 정점들을 위상정렬한다;
-    for each u∈V (위상정렬 순서로)
-        for each v∈L(u) ▷ L(u) : 정점 u로부터 연결된 정점들의 집합
-            if (du + wu,v<dv ) then {
-                    dv ← du + wu,v ;
-                    prev[v] ← u
+    for each u ∈ V                          ▷ 모든 정점 u에 대해
+        du ← ∞;                              ▷ 모든 정점까지의 거리 초기화
+    dr ← 0;                                  ▷ 시작점 r까지 거리는 0으로 설정
+    G의 정점들을 위상정렬한다;                ▷ 정점들을 사이클 없도록 순서대로 정렬
+
+    for each u ∈ V (위상정렬 순서로)
+        for each v ∈ L(u)                      ▷ L(u) : 정점 u로부터 연결된 정점들의 집합
+            if (du + w(u,v) < dv ) then {       ▷ u를 거쳐가는 경로가 더 짧다면
+                    dv ← du + wu,v ;            ▷ 최단 거리 업데이트
+                    prev[v] ← u                 ▷ 이것을 prev 리스트에 저장 
             }
  } 
 ```
