--- a/알고리즘 13주차.md
+++ b/알고리즘 13주차.md
@@ -201,6 +201,8 @@ FloydWarshall(G)                             ▷ 시작 상황: 입력으로 주
 
 ### 사이클이 없는 그래프의 최단 경로
 
+### 시간 복잡도 : Θ(V+E)
+
 ```ruby
 DAG-ShortestPath(G, r) 
 { 
@@ -210,7 +212,7 @@ DAG-ShortestPath(G, r)
     G의 정점들을 위상정렬한다;                ▷ 정점들을 사이클 없도록 순서대로 정렬
 
     for each u ∈ V (위상정렬 순서로)
-        for each v ∈ L(u)                      ▷ L(u) : 정점 u로부터 연결된 정점들의 집합
+        for each v ∈ L(u)                      ▷ L(u) : 정점 u로부터 이동할 수 있는 정점들의 집합, (역방향은 이동 x)
             if (du + w(u,v) < dv ) then {       ▷ u를 거쳐가는 경로가 더 짧다면
                     dv ← du + wu,v ;            ▷ 최단 거리 업데이트
                     prev[v] ← u                 ▷ 이것을 prev 리스트에 저장 
