--- a/알고리즘 13주차.md
+++ b/알고리즘 13주차.md
@@ -222,9 +222,15 @@ DAG-ShortestPath(G, r)
  } 
 ```
 
+<br/>
 
+### 사이클이 없는 그래프의 최단 경로 예시 
 
+![IMG_3417](https://github.com/user-attachments/assets/a1e4f430-d4ef-4af0-a5ee-668dd2ead5d8)
 
+![IMG_3418](https://github.com/user-attachments/assets/9725199a-bb62-4a9a-a608-54506b22e79f)
+
+![IMG_3419](https://github.com/user-attachments/assets/d8e541c1-2b9f-4935-90f9-2c0c655405f2)
 
 
 
