--- a/알고리즘 14주차.md
+++ b/알고리즘 14주차.md
@@ -279,18 +279,103 @@ GREEDY-ACTIVITY-SELECTOR(s, f, n)
 
 <br/>
 
-## p.17부터 공부 
+### 본 예제에서의 그리디 알고리즘 설계 과정 
 
+### 1. 최적 부분구조를 찾는다
 
+- 문제를 더 작은 부분 문제로 나누어도 그 해답이 전체 해답에 포함될 수 있는지를 본다
 
+- ex : 특정 시간 사이에 가능한 활동 집합을 나누어 살펴봄
 
+<br/>
 
+### 2. 재귀 알고리즘을 설계한다
 
+- 위에서 찾은 최적 부분구조를 바탕으로 재귀적으로 해를 구성한다
 
+<br/>
 
+### 3. 그리디 선택을 하면 부분구조가 하나만 남음을 보인다
 
+- 현재 가장 "좋아 보이는" 선택을 했을 때 남은 문제(부분 문제)가 하나만 남는지를 본다
 
+- ex: 종료 시간이 가장 빠른 활동을 선택한 뒤, 그 이후의 활동들만 고려
 
+<br/>
+
+### 4. 그리디 선택으로도 최적해를 구할 수 있음을 보인다
+
+- 그리디 방식으로 선택한 해가 실제로 전체에서 최적이라는 수학적 정당화를 제공
+
+- ex: 종료시간이 가장 빠른 활동을 선택해도 항상 최적의 수를 구성할 수 있음
+
+<br/>
+
+### 5. 재귀 알고리즘을 그리디 형태로 변경한다
+
+- 위 재귀 알고리즘을 반복문 기반으로 구현
+
+<br/>
+
+### 6. 필요하다면 iterative한 그리디 알고리즘으로도 변경한다
+
+- 루프 기반의 반복문으로 최종적으로 시간복잡도 감소
+
+<br/>
+
+##  일반적인 그리디 알고리즘 설계 과정
+
+1. 주어진 문제에 대해 그리디 방식의 선택을 했을 때 단 하나의 부분문제만 남는지 확인
+
+2. 그리디 선택을 해도 최적해를 구할 수 있음을 보인다
+
+3. 그리디 선택에 대한 부분 최적구조를 도출한다
+
+4. 해당 부분 최적구조를 바탕으로 알고리즘을 설계한다
+
+<br/>
+
+여기서 주의할 점은 주어진 문제에서 그리디 알고리즘으로 최적해를 구할 수 있는지 알려면 **그리디 선택 성질 (Greedy-choice property)** 을 확인해야 힌다
+
+<br/>
+
+## 그리디 선택 성질
+
+**그리디 선택 성질** : 그리디 선택으로도 **최적해**를 구할 수 있다는 것을 보이는 것
+
+동적 프로그래밍은 부분 문제의 해답에 따라 어떤 조합을 쓸지 달라질 수 있음 → 계산 순서도 중요함
+
+하지만 그리디 알고리즘은 문제를 푸는 과정에서 **부분 문제의 답이 뭐였는지 상관없이** 항상 같은 선택을 할 수 있어야 한다
+
+ex: 회의실 문제에서 가장 빨리 끝나는 활동을 선택해도, 나중 선택에 영향이 없고 최적해로 이어졌다면 → 그리디 가능!
+
+<br/>
+
+### 모든 그리디 문제는 원래 동적 프로그래밍(DP)으로도 풀 수 있다 
+
+- 그리디 알고리즘은 항상 그에 대한 **동적 프로그래밍 방식의 답안이 존재**한다 
+  
+- 따라서, 안전하게 알고리즘을 설계하는 방법은 동적 프로그래밍에서 시작해서 그리디 알고리즘 방식으로 넘어가는 것이나 그리디 알고리즘이 최적해를 보장하는지부터 생각해봐야한다
+
+<br/>
+
+다음 예시를 통해 비슷해 보이는 문제라도 그리디 알고리즘이 적용되는 경우와 동적 프로그래밍으로 풀어야만 하는 경우를 살펴 보자
+
+<br/>
+
+### 예시 문제 
+
+### 문제 1 : 0-1 knapsack problem
+
+- 특정 무게 W만큼을 담을 수 있는 보따리가 있다고 하고, 총 n개의 물건들에 대해 W 이하만큼만 담아서 **최대의 가치**를 갖는 보따리를 만들고 싶은 상황
+
+- 이 때, 물건은 무게 w와 가치v를 갖고 있으며 물건을 담을 때 **물건을 쪼갤 수 없어서** 반드시 무게 w만큼을 차지하여야 함
+
+<br/>
+
+### 문제 2 : Fractional knapsack problem
+
+- 0-1 knapsack problem과는 다르게 물건을 쪼갤 수 있기 때문에 특정 무게만큼 가득 채워서  보따리를 구성할 수 있고, 목표는 마찬가지로 최대의 가치를 갖는 보따리를 만들고 싶음
 
 
 
