--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -80,7 +80,7 @@ Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 
 
 ## NP 완비
 
-**NP-완비 문제** : 효율적으로 정답을 찾을 수 있는 알고리즘을 발견할 수 없는 문제라고 봐도 무방하다 
+**NP-완비 문제** : 정답은 존재하지만, 효율적으로 정답을 찾을 수 있는 알고리즘을 발견할 수 없는 문제
 
 따라서, NP-완비 문제에 대해 최적해를 구하기 위한 효율적인 알고리즘을 구상하는 것은 현재까지 알려지기로는 시간만 허비하는 행동에 가까우며 일반적으로는 **최적해에 가까운 해**를 효율적으로 근사하는 알고리즘을 개발하는데 중점을 둠
 
@@ -92,12 +92,15 @@ Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 
 
 ![image](https://github.com/user-attachments/assets/89cd818a-1665-4e8b-9c5a-926ef30b8942)
 
-## p.14
+## NP-하드 문제 
 
+- **NP-하드 문제** : 모든 NP 문제들로부터 다항식 시간에 변환할 수 있는 문제 집합
 
+- NP-하드 문제에서는 NP, 즉 주어진 해답을 **선형 시간 내에 검증할 수 없는 문제**도 포함되어 있음
 
+-  NP-하드는 NP-완비를 포함하고 있으므로, **NP-완비 문제를 NP-하드라고 표현하는 것**은 가능, 즉, NP 하드 문제에서는 **NP가 아닌 문제가 존재하지만 이것은 P가 아니다**
 
-
+<br/>
 
 
 
