--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -6,6 +6,40 @@
 
 **Class NP** : NP란 Nondeterministic Polynomial의 줄임말로써 (non p가 아님), 해당 의미를 설명하기엔 복잡하나 **해답이 주어진 경우 다항식 시간 이내에 검증 가능한 문제**로 볼 수 있음
 
+<br/>
+
+### P 문제 예시
+
+두 수 A, B가 주어졌을 때, A + B = C 인가?
+
+- 입력: A = 135, B = 229, C = 364
+
+- 컴퓨터는 바로 덧셈 수행 → "Yes" 또는 "No" 출력
+
+- 이건 단순 계산이므로 O(1)~O(n) 정도면 됨 → P 문제
+
+<br/>
+
+### NP 문제 예시
+
+어떤 정수 집합이 있을 때, 이 중 일부를 더해서 정확히 K가 되는 부분집합이 존재하는가?
+
+- 입력: {3, 9, 8, 4, 5, 7}, K = 15
+
+- 이걸 무작정 탐색하면 경우의 수가 2ⁿ → 직접 구하는 건 매우 오래 걸림
+
+<br/>
+
+그런데 누가 아래와 같이 해답을 줬다고 하자:
+
+- "정답은 {8, 7}이야"
+
+- 그러면 합이 15인지 확인하는 건 금방 가능 → 8 + 7 = 15 
+
+→ 검증은 빠르다 = NP 문제
+
+<br/>
+
 Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 두 군의 포함관계가 정확히 어떤지 증명된 바는 없음** 다만, 경험적으로 **대부분 P에 속하지 않는 NP 문제들이 있다고 추정 중**
 
 ![image](https://github.com/user-attachments/assets/9ae6e05e-fda7-4c8e-abfd-5d68aaadac5a)
