--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -114,7 +114,7 @@ Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 
 
 ## NP 완비
 
-**NP-완비 문제** : 정답은 존재하지만, 효율적으로 정답을 찾을 수 있는 알고리즘을 발견할 수 없는 문제
+**NP-완비 문제** : 효율적으로 정답을 찾을 수 있는 알고리즘을 발견할 수 없는 문제, 답이 존재하는지도 모름 -> 답이 있냐 없냐를 결정하는 문제
 
 따라서, NP-완비 문제에 대해 최적해를 구하기 위한 효율적인 알고리즘을 구상하는 것은 현재까지 알려지기로는 시간만 허비하는 행동에 가까우며 일반적으로는 **최적해에 가까운 해**를 효율적으로 근사하는 알고리즘을 개발하는데 중점을 둠
 
@@ -136,10 +136,25 @@ Class NP는 class P를 포함하고 있으나, 아래의 그림처럼 **P와 NP 
 
 <br/>
 
+쉽게 말해서 NP 하드는 모든 NP 문제를 문제 A로 바꿔서 풀 수 있다면, 문제 A만 풀 수 있어도 모든 NP 문제를 풀 수 있다는 의미이다
 
+따라서, 문제 A가 NP의 대표이자, 가장 어려운 핵심 문제처럼 작동한다는 의미
 
+<br/>
 
+NP 완비 문제들은 겉보기에는 다 달라도, 본질적으로 같은 ‘계산적 핵심’을 공유한다 그래서 하나만 다항식 시간에 풀리면, 변환을 통해 모두 다 풀 수 있는 것이다 
 
+<br/>
+
+### NP-완비 조건
+
+![IMG_3421](https://github.com/user-attachments/assets/cc948969-81f7-4c48-80f0-22e2c237f281)
+
+정리와 같이 문제 A가 두 가지 조건을 만족해야 NP-완비 문제가 된다 
+
+1. **A는 NP이다**
+
+2. **A는 NP하드이다**
 
 
 
