--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -156,11 +156,25 @@ NP 완비 문제들은 겉보기에는 다 달라도, 본질적으로 같은 ‘
 
 2. **A는 NP하드이다**
 
+<br/>
 
+### NP-완비를 증명하려면, NP-하드임을 먼저 보여야 한다
 
+![image](https://github.com/user-attachments/assets/8eb525c4-9d0a-45e6-b78c-b1355bdb433c)
 
+NP-하드 문제의 개념만 보면, 어떤 문제가 NP-하드임을 보이려면 **모든 NP 문제로부터 다항식 시간 변환이 가능함**을 보여야 한다. 하지만 **이건 현실적으로 불가능**에 가깝다 (NP 문제는 무한히 많음)
 
+그래서 우리는 **이미 NP-하드로 알려진 대표 문제로**부터 **해당 문제를 다항식 시간에 변환**해 주면 됨
 
+<br/>
+
+### 증명 비유 
+
+“이 문제가 진짜 어려운 문제인지 증명하려면, 전 세계 수학 문제 전부랑 비교해야 해요.” → 너무 어려움!
+
+그래서 어떻게 하냐?
+
+“이미 엄청 어려운 문제로 인정된 문제랑 비교해서 그걸 이 문제로 바꿀 수 있다고 보여주는 거예요.” → 그러면 이 문제도 충분히 어렵다고 인정됨 → NP-하드
 
 
 
