--- a/알고리즘 15주차.md
+++ b/알고리즘 15주차.md
@@ -170,11 +170,9 @@ NP-하드 문제의 개념만 보면, 어떤 문제가 NP-하드임을 보이려
 
 ### 증명 비유 
 
-“이 문제가 진짜 어려운 문제인지 증명하려면, 전 세계 수학 문제 전부랑 비교해야 해요.” → 너무 어려움!
+- 어떤 수학 문제가 진짜 어려운 문제인지 증명하려면, 전 세계 수학 문제 전부랑 비교하는 것 → 너무 어려움!
 
-그래서 어떻게 하냐?
-
-“이미 엄청 어려운 문제로 인정된 문제랑 비교해서 그걸 이 문제로 바꿀 수 있다고 보여주는 거예요.” → 그러면 이 문제도 충분히 어렵다고 인정됨 → NP-하드
+- 이미 엄청 어려운 문제로 인정된 문제랑 비교해서 그걸 이 문제로 바꿀 수 있음을 보임 → 그러면 이 문제도 충분히 어렵다고 인정됨 → NP-하드
 
 
 
