--- a/알고리즘 16주차.md
+++ b/알고리즘 16주차.md
@@ -2,17 +2,29 @@
 
 **상태공간트리(State-Space Tree)** : 문제 해결 과정의 **중간 상태**를 각각 하나의 노드로 나타낸 트리를 의미
 
-![IMG_3439](https://github.com/user-attachments/assets/464306f0-3446-4729-b4a5-ad8d121ea6ec)
+<br/>
 
-![IMG_3438](https://github.com/user-attachments/assets/22b65e1f-dbf9-4c83-b1fa-3560ac7f9fc6)
+### TSP 예시 
 
+- 왼쪽 표: 각 도시 간 거리 행렬 (1~5 도시)
 
+- 오른쪽 그래프: 도시 간 거리 기반의 완전 그래프 (각 도시 간 간선 있음)
 
+![IMG_3439](https://github.com/user-attachments/assets/7333661c-fd57-4b0b-b8e4-dcd01f055e05)
 
+![IMG_3438](https://github.com/user-attachments/assets/4a02e185-b536-46d2-aec1-ea984bbc002b)
 
+해당 트리를 보면 다음과 같이 트리가 작성되었다 
 
+- Depth 0 (루트): 1개 (1)
 
+- Depth 1 (1-2, 1-3, 1-4, 1-5): 4개
 
+- Depth 2 (예: 1-2-3, 1-2-4, ...): 12개 (각 depth 1 노드당 3개씩 → 4×3=12)
+
+- Depth 3 (예: 1-2-3-4, 1-2-3-5, ...): 24개 (각 depth 2 노드당 2개씩 → 12×2=24)
+
+각 계산은 경우의 수 이용 (1은 고정되어 있고 2,3,4,5 끼리 순서를 정하는 것 ex: Depth 3은 1은 고정되어 있고, 첫번째로 올 수 있는 수는 4개 다음은 3개 그 다음은 2개 -> 4x3x2 = 24)
 
 
 
