--- a/알고리즘 16주차.md
+++ b/알고리즘 16주차.md
@@ -26,9 +26,27 @@
 
 각 계산은 경우의 수 이용 (1은 고정되어 있고 2,3,4,5 끼리 순서를 정하는 것 ex: Depth 3은 1은 고정되어 있고, 첫번째로 올 수 있는 수는 4개 다음은 3개 그 다음은 2개 -> 4x3x2 = 24)
 
+<br/>
 
+이렇게 트리로 중간중간의 상태를 나타낸 것을 **상태공간트리(State-Space Tree)** 라고 한다 
 
+<br/>
 
+## 백트래킹
+
+**백트래킹(BackTracking)** : DFS 혹은 그와 유사한 스타일의 탐색을 총칭하는 용어
+
+- 깊이 우선 탐색(DFS) 방식의 한 종류. 실패하거나 끝까지 갔을 때 되돌아가서 다른 경로를 시도하는 방식
+
+- 상태공간트리를 DFS 방식으로 할 수 있는데까지 계속해서 탐색해가며 가능한 한 깊게 내려가다가 더 이상 갈 수 없으면 되돌아온 뒤, 다른 노드를 탐색
+
+- 주로 재귀적으로 구현
+
+<br/>
+
+### 백트래킹 예시 
+
+![IMG_3440](https://github.com/user-attachments/assets/b31e1e41-0e5e-4358-a4b4-6c565496d45b)
 
 
 
