--- a/알고리즘 16주차.md
+++ b/알고리즘 16주차.md
@@ -48,8 +48,35 @@
 
 ![IMG_3440](https://github.com/user-attachments/assets/b31e1e41-0e5e-4358-a4b4-6c565496d45b)
 
+<br/>
 
+### 미로찾기 백트래킹 알고리즘
 
+```ruby
+maze(v) {
+    visited[v] ← YES;                  ▷ v 정점을 방문 표시
+    if (v = T) then {print "성공!";}   ▷ 도착지(T)에 도달하면 성공 출력
+    for each x ∈ L(v)                  ▷ 현재 정점 v에 인접한 모든 정점 x에 대해
+        if (visited[x] = NO) then {    ▷ 아직 방문하지 않았다면
+            prev[x] ← v;               ▷ 경로 추적용으로 이전 정점 저장 (돌아가는 길을 저장하기 위함)
+            maze(x);                   ▷ 재귀적으로 다음 정점 탐색
+        }
+}
+```
+
+## 한정분기 
+
+**한정분기(Branch-and-Bound)** : 경우의 수가 나누어지는 분기를 모두 다 수행하는것이 아니라, **한정된 수에 대해서**만 수행해서 탐색 효율을 높이는 방법을 의미 -> **가능성이 없는 분기는 애초에 제외**
+
+- **미리 계산된 근사해를 알고있어야** 하며, 따라서 아직 답안을 다 도출하기 전이라도 **이미 근사해보다 좋지 않은 결과가** 나올 것이 예정된 선택들은 더 이상 탐색하느라 **시간을 낭비하지 않고 선택지에서 제외**함
+
+<br/>
+
+### 백트래킹과의 공통점 및 차이점
+
+**공통점** : 여러가지 경우들을 차례로 나열해야 함
+
+**차이점** : 백트래킹은 더 이상 진행되지 않을 때까지 탐색을 수행하는 반면, **한정분기**에서는 최적해를 찾을 가능성이 없는 분기는 애초에 **제외**하게 됨
 
 
 
