--- a/알고리즘 16주차.md
+++ b/알고리즘 16주차.md
@@ -68,7 +68,7 @@ maze(v) {
 
 **한정분기(Branch-and-Bound)** : 경우의 수가 나누어지는 분기를 모두 다 수행하는것이 아니라, **한정된 수에 대해서**만 수행해서 탐색 효율을 높이는 방법을 의미 -> **가능성이 없는 분기는 애초에 제외**
 
-- **미리 계산된 근사해를 알고있어야** 하며, 따라서 아직 답안을 다 도출하기 전이라도 **이미 근사해보다 좋지 않은 결과가** 나올 것이 예정된 선택들은 더 이상 탐색하느라 **시간을 낭비하지 않고 선택지에서 제외**함
+**미리 계산된 근사해를 알고있어야** 하며, 따라서 아직 답안을 다 도출하기 전이라도 **이미 근사해보다 좋지 않은 결과가** 나올 것이 예정된 선택들은 더 이상 탐색하느라 **시간을 낭비하지 않고 선택지에서 제외**함
 
 <br/>
 
