--- a/알고리즘 16주차.md
+++ b/알고리즘 16주차.md
@@ -78,8 +78,29 @@ maze(v) {
 
 **차이점** : 백트래킹은 더 이상 진행되지 않을 때까지 탐색을 수행하는 반면, **한정분기**에서는 최적해를 찾을 가능성이 없는 분기는 애초에 **제외**하게 됨
 
+![image](https://github.com/user-attachments/assets/fcc42eed-95fa-4f02-86af-da0607047e37)
 
+<br/>
 
+### TSP & 한정분기 예시 
+
+TSP에 대해 한정분기를 적용하는 예시를 살펴보기 전에, 리프노드가 아닌 노드에서 해당 노드를 거쳐가는 답안의 **하한값을 설정**하는 방식에 대해 설명하고자 한다 
+
+- 각 노드와 이어진 간선 중 **가장 짧은 간선들**을 뽑으면 아래에서 빨간색으로 강조한 값이 됨
+
+- 아래 빨간 원으로 표시한 것은 초기에 모든 노드를 순회할 수 있는 **최소 경로(하한값)** 을 정한 것
+
+- 하한값 기준은 시작점에서 출발해서 다시 돌아오는 루트까지가 아니라 순회만 하는 기준
+
+- **하한값을 설정하는 이유** : 더 볼 가치가 없는 경로”를 조기에 제거하기 위한 기준점을 만들기 위함 
+  
+![image](https://github.com/user-attachments/assets/3dc6221f-1b2a-4525-8f6f-034d129133d7)
+
+<br/>
+
+아래 과정을 보며 이해를 하자 
+
+<br/>
 
 
 
