--- a/알고리즘 16주차.md
+++ b/알고리즘 16주차.md
@@ -120,18 +120,29 @@ TSP에 대해 한정분기를 적용하는 예시를 살펴보기 전에, 리프
 
 ![IMG_3452](https://github.com/user-attachments/assets/1488a90d-c3da-45c7-8da3-46e486290e58)
 
+<br/>
 
+## A* 알고리즘
 
+A* 알고리즘 : 그래프에서 두 지점간의 최단경로를 찾을 때 사용하는 알고리즘
 
+- 다익스트라 알고리즘과 유사하지만, 다익스트라 알고리즘은 시작점이 주어지면 다른 모든 정점에 대한 최단거리를 구하기 때문에 정확히 두 지점간의 최단경로를 찾으려는 입장에선 효율적이지 않을 수 있음
+
+- 상태공간트리 또한 그래프이므로 A* 알고리즘을 활용한 탐색이 가능
 
 <br/>
 
+### 최적우선탐색(Best-First Search)
 
+- **최적우선탐색(Best-First Search)** 은 A* 알고리즘의 탐색 전략 -> **가장 가능성 있어 보이는 노드부터** 우선 방문
+  
+- 그래프 탐색 방식 중 하나로써 각 정점이 매력함수값 𝑔(𝑥)를 갖고 있음
 
+- 방문하지 않은 정점들 중 𝑔(𝑥)값이 가장 매력적인 정점들부터 방문하는 방식
 
+- 우리가 일반적으로 알고 있는 너비 우선 탐색(Breadth-First Search)의 BFS와 헷갈리지 않게 조심
 
-
-
+  
 
 
 
