Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -1,3 +1,126 @@
 ## 문제 1 
 
 ![image](https://github.com/user-attachments/assets/1189c35e-a07a-47ed-bd21-ca0c66bc24de)
+
+<br/>
+
+### 풀이과정 
+
+### 최적 부분 구조 
+
+![IMG_3465](https://github.com/user-attachments/assets/79f108f1-0d5f-4797-9c9d-f40320d56211)
+
+<br/>
+
+### DP 알고리즘 
+
+```ruby
+def max_partial_sum(a):
+    n = len(a)
+    if n == 0:
+        return 0
+    if n == 1:
+        return a[0]
+
+    Ai = [0] * n
+    Ai[0] = a[0]
+    Ai[1] = max(a[0], a[1])
+
+    for i in range(2, n):
+        Ai[i] = max(Ai[i-1], Ai[i-2] + a[i])
+
+    return Ai[-1]
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
