Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -1,4 +1,4 @@
-## 문제 1 
+![image](https://github.com/user-attachments/assets/0231675f-571d-4903-abc3-7b961540c64d)## 문제 1 
 
 ![image](https://github.com/user-attachments/assets/1189c35e-a07a-47ed-bd21-ca0c66bc24de)
 
@@ -50,6 +50,11 @@ def max_partial_sum(a):
 
 i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조건), i가 선택 되면다면, i와 i-2가 선택이 될 것이다 
 
+<br/>
+
+## 문제 2
+
+![image](https://github.com/user-attachments/assets/16ef4bde-595a-4034-9f5f-0739b624f716)
 
 
 
