Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/0231675f-571d-4903-abc3-7b961540c64d)## 문제 1 
+## 문제 1 
 
 ![image](https://github.com/user-attachments/assets/1189c35e-a07a-47ed-bd21-ca0c66bc24de)
 
@@ -56,8 +56,29 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 
 ![image](https://github.com/user-attachments/assets/16ef4bde-595a-4034-9f5f-0739b624f716)
 
+### 풀이 과정 
 
+각각의 가중치의 값을 오름차순으로 정렬한 것은 다음과 같다 
 
+- (1,4) - 1
+
+- (1,2) - 2
+
+- (2,3) - 3
+
+- (1,5) - 4
+
+- (3,4) - 5
+
+- (2,6) - 7S
+
+- (3,6) - 8
+
+- (4,5) - 9
+
+![image](https://github.com/user-attachments/assets/c09f7c54-27ae-4275-a90f-7abf8878b1ed)
+
+![IMG_3467](https://github.com/user-attachments/assets/3d0dbd9e-9296-487a-9e4e-cb6c92a80b04)
 
 
 
