Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -80,8 +80,15 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 
 ![IMG_3467](https://github.com/user-attachments/assets/3d0dbd9e-9296-487a-9e4e-cb6c92a80b04)
 
+<br/>
 
+## 문제 3 
 
+![image](https://github.com/user-attachments/assets/ce4753a8-1d0c-47a4-ba92-bb35cf403e30)
+
+### 풀이 과정 
+
+![IMG_3468](https://github.com/user-attachments/assets/c3a1e373-be84-4a18-9eca-c40f840c688f)
 
 
 
