Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -90,8 +90,19 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 
 ![IMG_3468](https://github.com/user-attachments/assets/c3a1e373-be84-4a18-9eca-c40f840c688f)
 
+이런식으로 그려 나가면 됨 -> 시간 남으면 끝까지 풀기 
 
+<br/>
 
+## 문제 4
+
+![image](https://github.com/user-attachments/assets/cda20d13-6c7b-4fc4-a7c7-1483e6a9cc17)
+
+<br/>
+
+### 풀이 과정 
+
+Greedy-choice property란 전체 최적해의 일부가 되는 선택(부분 최적해)을 **탐욕적으로**(=지역적으로 최적인 선택) 선택해도, 그 결과가 전체 최적해로 확장 가능하다는 성질
 
 
 
