Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -102,12 +102,31 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 
 ### 풀이 과정 
 
-Greedy-choice property란 전체 최적해의 일부가 되는 선택(부분 최적해)을 **탐욕적으로**(=지역적으로 최적인 선택) 선택해도, 그 결과가 전체 최적해로 확장 가능하다는 성질
+**Greedy-choice property 증명**
 
+- OPT는 x 없이 최적인 작업 집합이라고 가정 
 
+- x는 마감기한 ≤ d 에 배정 가능했는데도 포함 안 됐다고 가정
 
+- 그렇다면 OPT에는 x보다 이익이 적은 작업 y가 동일한 시간 슬롯에 배정되어 있을 수 있음
 
+- 그러면 y를 제거하고 x를 그 자리에 넣으면 이익이 늘어남 → OPT보다 더 나은 해 → 모순
 
+- 따라서 x는 반드시 최적해에 포함될 수 있음
+
+즉, 탐욕적으로 고른 작업은 최적해의 일부가 될 수 있으므로 **Greedy-choice property가 성립함**
+
+<br/>
+
+**그리디 알고리즘 방식의 알고리즘 서술 과정**
+
+전략 : **이익이 가장 큰 작업**부터 선택하여, 마감기한 이하에서 **가능한 가장 늦은 시간 슬롯에 배정**
+
+1. 작업들을 이익 기준으로 내림차순 정렬 → 이익이 가장 큰 작업부터 고려하기 위함
+
+2. 가장 큰 이익에서 마감기한 이하의 시간 중 가장 늦은 시간 부터 탐색한다 
+
+3. 비어있는 슬롯을 찾으면 해당 작업을 배정후, 해당 작접을 제외한 최대 이익을 기준으로 이것을 반복한다 
 
 
 
