--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -1,4 +1,4 @@
-## 문제 1 
+![image](https://github.com/user-attachments/assets/e88b3e31-d6b8-4896-b9c1-d857b5b5fced)## 문제 1 
 
 ![image](https://github.com/user-attachments/assets/1189c35e-a07a-47ed-bd21-ca0c66bc24de)
 
@@ -127,6 +127,21 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 2. 가장 큰 이익에서 마감기한 이하의 시간 중 가장 늦은 시간 부터 탐색한다 
 
 3. 비어있는 슬롯을 찾으면 해당 작업을 배정후, 해당 작접을 제외한 최대 이익을 기준으로 이것을 반복한다 
+
+<br/>
+
+## 문제 5
+
+![image](https://github.com/user-attachments/assets/e42af5bc-505d-41d3-aba4-629be352d337)
+
+1. SUBSET-SUM ∈ NP임을 보이기
+
+어떤 집합 A⊆S가 주어졌을 때 ∑ x∈A
+​
+ =t 인지 다항 시간 내에 합산 가능
+
+따라서 SUBSET-SUM 문제는 **검증 가능성(verification)**을 만족함 →
+  SUBSET-SUM ∈ NP
 
 
 
