Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -134,14 +134,8 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 
 ![image](https://github.com/user-attachments/assets/e42af5bc-505d-41d3-aba4-629be352d337)
 
-1. SUBSET-SUM ∈ NP임을 보이기
+![IMG_3469](https://github.com/user-attachments/assets/d9ccfd71-2248-4635-90d7-4d910a08518b)
 
-어떤 집합 A⊆S가 주어졌을 때 ∑ x∈A
-​
- =t 인지 다항 시간 내에 합산 가능
-
-따라서 SUBSET-SUM 문제는 **검증 가능성(verification)**을 만족함 →
-  SUBSET-SUM ∈ NP
 
 
 
