--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -323,6 +323,8 @@ DFS-TS(v)
  }
 ```
 
+### 원래는 진입 차수 0부터 시작하는게 일반적임 
+
 ![IMG_3246](https://github.com/user-attachments/assets/18f3c77e-98fd-4b8d-9dd9-7acda48cc55e)
 
 ![스크린샷 2025-05-18 220641](https://github.com/user-attachments/assets/cc8c6f87-a498-44ed-8520-e93b3cfb1ba9)
