Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/e88b3e31-d6b8-4896-b9c1-d857b5b5fced)## 문제 1 
+## 문제 1 
 
 ![image](https://github.com/user-attachments/assets/1189c35e-a07a-47ed-bd21-ca0c66bc24de)
 
@@ -136,8 +136,13 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 
 ![IMG_3470](https://github.com/user-attachments/assets/30883a44-bc21-420a-aba1-0d13ce1490c0)
 
+<br/>
 
+## 문제 6
 
+![image](https://github.com/user-attachments/assets/7acadb3d-17a7-41a7-b2b6-dab02ee7ca1a)
+
+![IMG_3471](https://github.com/user-attachments/assets/baebf3c9-9106-48f0-876e-4a7bc8324986)
 
 
 
