--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -14,8 +14,13 @@
 
 ### 동적 프로그래밍
 
-문제의 해답에 더 작은 문제의 해답이 포함되어 있으며, 이를 재귀호출로 구현할 때 같은 해답을 구하기 위한 중복 호출이 다수 발생하는 경우에 활용하는 문제해결 기법
+**동적 프로그래밍** : 문제의 해답에 **더 작은 문제의 해답**이 포함되어 있으며, 이를 **재귀호출로 구현할 때 같은 해답을 구하기 위한 중복 호출**이 다수 발생하는 경우에 활용하는 **문제해결 기법**
 
+<br/>
+
+### 동적 프로그래밍 목적 
+
+재귀를 사용했을 때 **같은 연산을 반복해야하는 비효율적인 연산을 해결**하기 위해 계산된 값을 메모리에 저장하여 효율적으로 계산하기 위함
 
 
 
