--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -20,7 +20,7 @@
 
 ### 동적 프로그래밍 목적 
 
-재귀를 사용했을 때 **같은 연산을 반복해야하는 비효율적인 연산을 해결**하기 위해 계산된 값을 메모리에 저장하여 효율적으로 계산하기 위함
+재귀를 사용했을 때 **같은 연산을 반복해야하는 비효율적인 연산을 해결**하기 위해 계산된 값을 **메모리에 저장**하여 효율적으로 계산하기 위함
 
 
 
