--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -22,8 +22,25 @@
 
 재귀를 사용했을 때 **같은 연산을 반복해야하는 비효율적인 연산을 해결**하기 위해 계산된 값을 **메모리에 저장**하여 효율적으로 계산하기 위함
 
+<br/>
 
+### 동적 프로그래밍을 적용하는 문제의 두 가지 성질
 
+- **최적 부분 구조** : **큰 문제의 최적 솔루션에 작은 문제의 최적 솔루션이 포함**, 즉 하위 레벨로 갔을 때 해답이 존재해야 함 -> base case만 알고 있으면 안되고, **모든 하위 단계를 구할 수 있어야 함**
+
+- **중복되는 부분 문제** : 재귀적 해법으로 풀면 같은 문제에 대한 **재귀호출이 심하게 중복되는 문제**
+
+<br/>
+
+### 피보나치 예시
+
+![image](https://github.com/user-attachments/assets/5b8af235-fc63-454e-90de-3b32b803d994)
+
+<br/>
+
+### 피보나치 & 동적 프로그래밍
+
+![image](https://github.com/user-attachments/assets/24408eed-5592-4730-870e-2a4a743e28c0)
 
 
 
