--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -42,8 +42,17 @@
 
 ![image](https://github.com/user-attachments/assets/24408eed-5592-4730-870e-2a4a743e28c0)
 
+<br/>
 
+### 행렬 경로 문제
 
+![image](https://github.com/user-attachments/assets/17a0d789-e040-4240-baff-a9533ceb1c9c)
+
+- m[i][j] : 행렬의 각 칸에 있는 숫자
+
+- c[i][j] : (1,1)에서 시작해서 (i,j)에 도달할 수 있는 최대 점수
+
+- 점수는 이동 경로 중 방문한 칸의 수를 누적해서 계산함
 
 
 
