--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -46,6 +46,8 @@
 
 ### 행렬 경로 문제
 
+**시간 복잡도 : O(2^(n+m))** (n x m 행렬)
+
 ![image](https://github.com/user-attachments/assets/17a0d789-e040-4240-baff-a9533ceb1c9c)
 
 - m[i][j] : 행렬의 각 칸에 있는 숫자
@@ -54,11 +56,32 @@
 
 - 점수는 이동 경로 중 방문한 칸의 수를 누적해서 계산함
 
+<br/>
 
+### 행렬 경로 문제 & DP
 
+**시간 복잡도 : Θ(𝑛2)**
 
+```ruby
+matrixPath(n) 
+▷(n, n)에 이르는 최고점수 
+{ 
 
+for i ← 0 to n
+    c[i, 0] ← 0; 
 
+for j ← 1 to n
+    c[0, j] ← 0; 
+
+for i ← 1 to n
+    for j ← 1 to n
+       c[i, j] ← mij + max(c[i-1,  j], c[i,  j-1]);     ▷ mij의 데이터만 주어지고 C는 모든 위치까지의 최대 경로가 저장됨
+
+return c[n, n]; 
+}
+```
+
+![IMG_3154](https://github.com/user-attachments/assets/597139cf-2094-4810-8f7b-c986807dc827)
 
 
 
