--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -83,19 +83,13 @@ return c[n, n];
 
 ![IMG_3154](https://github.com/user-attachments/assets/597139cf-2094-4810-8f7b-c986807dc827)
 
+<br/>
 
+### 돌 놓기 문제
 
+![image](https://github.com/user-attachments/assets/544b23da-bd9d-42fa-927f-c45011eea3ed)
 
-
-
-
-
-
-
-
-
-
-
+![image](https://github.com/user-attachments/assets/65121e32-3250-4bfb-9e7e-d1d35350c578)
 
 
 
