--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -46,6 +46,8 @@
 
 ### 행렬 경로 문제
 
+**목표** : 행렬의 좌상단에서 시작하여 우하단까지 이동하되, 방문한 칸에 있는 수들을 더한 값이 **최대화**되도록 한다
+
 **시간 복잡도 : O(2^(n+m))** (n x m 행렬)
 
 ![image](https://github.com/user-attachments/assets/17a0d789-e040-4240-baff-a9533ceb1c9c)
@@ -87,6 +89,15 @@ return c[n, n];
 
 ### 돌 놓기 문제
 
+돌 놓기 문제는 3 × 𝑛 행렬의 각 칸에 양 또는 음의 정수가 기록되어 있으며, 해당 행렬에 돌을 놓는 상황이다
+
+**제약조건**
+
+- 가로나 세로로 인접한 두 칸에 동시에 조약돌을 놓을 수 없다
+
+- 각 열에는 적어도 하나 이상의 조약돌을 놓는다
+
+**목표**: 돌이 놓인 자리에 있는 수들의 합이 최대가 되도록 돌 놓기
 ![image](https://github.com/user-attachments/assets/544b23da-bd9d-42fa-927f-c45011eea3ed)
 
 ![image](https://github.com/user-attachments/assets/65121e32-3250-4bfb-9e7e-d1d35350c578)
