--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -46,7 +46,13 @@
 
 ### 행렬 경로 문제
 
+![image](https://github.com/user-attachments/assets/1a96ffb7-ea46-4ed0-ab49-a12945da1060)
+
 **목표** : 행렬의 좌상단에서 시작하여 우하단까지 이동하되, 방문한 칸에 있는 수들을 더한 값이 **최대화**되도록 한다
+
+<br/>
+
+### 행렬 경로 문제 최적 부분 구조 
 
 **시간 복잡도 : O(2^(n+m))** (n x m 행렬)
 
