--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -111,9 +111,47 @@ return c[n, n];
 
 ![image](https://github.com/user-attachments/assets/65121e32-3250-4bfb-9e7e-d1d35350c578)
 
+<br/>
 
+### 돌 놓기 문제 최적 부분 구조 확인
 
+![image](https://github.com/user-attachments/assets/db6ff4d9-5937-4e29-9462-edaa268a746c)
 
+<br/>
+
+### 돌 놓기 문제 재귀 알고리즘
+
+```ruby
+pebble(i, p)
+▷i열이 패턴 p로 놓일 때의 i열까지의 최대 점수 합 구하기
+▷w[i, p] : i 열이 패턴 p로 놓일 때 i열에 돌이 놓인 곳의 점수 합  p = {1, 2, 3, 4}
+{
+    if (i == 1)
+        return w[1, p];
+    else {
+        max ← -∞;  ▷ 초기 max값을 그냥 작은 수로 놓겠다는 의미
+
+        for q ← 1 to 4 {
+            if (패턴 q가 패턴 p와 양립) {    ▷ 현재 패턴이 이전 패턴과 서로 조건이 맞다면 if문 통과, 즉 양립하는 모든 패턴을 검사함
+                tmp ← pebble(i - 1, q);      ▷재귀 실행 -> 답을 구하고 다음 코드로 넘어감 
+                if (tmp > max)
+                    max ← tmp; 
+            }
+        }
+
+        return (max + w[i, p]);              ▷ 현재 노드 + 이전 패턴의 최대 값
+    }
+}
+
+pebbleSum(n)
+ ▷n 열까지 조약돌을 놓은 방법 중 최대 점수 합 구하기
+{
+     return max { pebble(n, p) } ;
+ }
+
+ ▷ p =1,2,3,4
+ ▷ pebble(i, 1), …, pebble(i, 4) 중 최대값이 최종적인 답
+```
 
 
 
