--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -153,7 +153,26 @@ pebbleSum(n)
  ▷ pebble(i, 1), …, pebble(i, 4) 중 최대값이 최종적인 답
 ```
 
+<br/>
 
+### 돌 놓기 문제 & DP 
+
+돌 놓기 문제를 DP를 활용하여 다음과 같이 풀 수 있다 
+
+```ruby
+pebble(n)
+{
+    for p ← 1 to 4
+        peb[1][p] ← w[1][p];    ▷ peb 배열에 저장하며 불러오는 형식 
+
+    for i ← 2 to n
+        for p ← 1 to 4
+            peb[i][p] ← max { peb[i-1][q] } + w[i][p];
+                        // 단, q는 p와 양립하는 패턴
+
+    return max { peb[n][p] } ;  // p = 1, 2, 3, 4
+}
+```
 
 
 
