--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -174,6 +174,13 @@ pebble(n)
 }
 ```
 
+<br/>
+
+### 돌 놓기 문제 & DP 시간복잡도
+
+![image](https://github.com/user-attachments/assets/a4235526-43ad-423f-a899-63104659ee85)
+
+
 
 
 
