Update 기말 정리본.md'

--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -180,10 +180,13 @@ pebble(n)
 
 ![image](https://github.com/user-attachments/assets/a4235526-43ad-423f-a899-63104659ee85)
 
+<br/>
 
+### 퀴즈 :  도미노 문제 
 
+![image](https://github.com/user-attachments/assets/6a8b4263-2249-47d0-8148-3e7ad792490c)
 
-
+![IMG_3472](https://github.com/user-attachments/assets/7299ecaa-4c47-4f56-b70b-76001c2c4675)
 
 
 
