--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -188,8 +188,25 @@ pebble(n)
 
 ![IMG_3472](https://github.com/user-attachments/assets/7299ecaa-4c47-4f56-b70b-76001c2c4675)
 
+<br/>
 
+## 8-2 주차 
 
+### 8-2 주차 흐름 순
+
+행렬 곱셈 순서 문제
+
+<br/>
+
+### 행렬 곱셈 문제
+
+만약 𝐴는 10×100 , 𝐵는 100 × 5, 𝐶는 5 × 50의 shape을 갖고 있다면
+
+(𝐴𝐵)𝐶: 7500번 스칼라 곱셈 필요
+
+𝐴(𝐵𝐶): 75000번 스칼라 곱셈 필요
+
+**목표** : 이에 행렬곱 𝐴1𝐴2𝐴3…𝐴𝑛 을 가장 효율적으로 연산하는 **공식을 찾는 것**
 
 
 
