--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -208,6 +208,11 @@ pebble(n)
 
 **목표** : 이에 행렬곱 𝐴1𝐴2𝐴3…𝐴𝑛 을 가장 효율적으로 연산하는 **공식을 찾는 것**
 
+<br/>
+
+### 행렬 곱셈 문제 최적 부분 구조 
+
+![image](https://github.com/user-attachments/assets/d28c2906-f615-4bb5-aef6-13aaa51f31b3)
 
 
 
