--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -214,7 +214,71 @@ pebble(n)
 
 ![image](https://github.com/user-attachments/assets/d28c2906-f615-4bb5-aef6-13aaa51f31b3)
 
+<br/>
 
+### 행렬 곱셈 문제 & 재귀 함수
+
+**시간 복잡도 : Ω(2^n) (빅 오메가)** 
+
+```ruby
+rMatrixChain(i, j)
+▷ 행렬곱 A_i ... A_j 를 구하는 최소 비용 구하기
+{
+    if (i == j) then return 0;          ▷ 행렬이 하나뿐인 경우, 곱셈 필요 없음 → 비용 0
+
+    min ← ∞;                            ▷ 최소 값을 의미하는 임의의 작은 수를 의미
+
+    for k ← i to j - 1 {
+        q ← rMatrixChain(i, k) + rMatrixChain(k + 1, j) + p_{i-1} * p_k * p_j;   ▷ 두 부분의 최소 비용 + 최종 곱셈 비용
+
+        if (q < min) then min ← q;
+    }
+
+    return min;
+}
+```
+
+<br/>
+
+### 행렬 곱셈 문제 & DP
+
+**시간 복잡도 : O(n³)**
+
+matrixChain(n)
+{
+    for i ← 1 to n
+        m[i, i] ← 0;  ▷ 행렬이 하나뿐인 경우의 비용은 0 (ex m[1,1] , m[2,2], ...)
+
+    for r ← 1 to n - 1   ▷ r: 행렬 길이를 결정하는 변수 (ex: r = 1이면 j = i+1이므로, m[i,j]는 길이가 2인 행렬의 비용을 계산 -> bottom up 방식으로 올라감)
+        for i ← 1 to n - r {
+            j ← i + r;
+            m[i, j] ← min {m[i, k] + m[k+1, j] + p_{i-1} * p_k * p_j}
+               
+            };
+
+    return m[1, n];
+}
+
+<br/>
+
+### 행렬 곱셈 문제 & DP 구현
+
+```ruby
+Matrix-Chain-Order(p, n)
+    let m[1 : n, 1 : n] and s[1 : n - 1, 2 : n] be new tables // m과 s 테이블을 초기화한다
+    for i = 1 to n                                            // 길이가 1인 행렬 곱셈은 비용이 0이므로 초기화
+        m[i, i] = 0                                           // 대각 원소를 0으로 설정
+    for l = 2 to n                                            // 체인의 길이를 2부터 n까지 증가시킴
+        for i = 1 to n - l + 1                                // 시작 인덱스 설정
+            j = i + l - 1                                     // 종료 인덱스 설정
+            m[i, j] = ∞                                       // 초기 값을 무한대로 설정
+            for k = i to j - 1                                    // k를 i에서 j-1까지 순회
+                q = m[i, k] + m[k + 1, j] + pi-1 * pk * pj    // 비용 계산: 두 부분의 비용 + 현재의 곱셈 비용
+                if q < m[i, j]                                // 더 작은 비용이 발견되면
+                    m[i, j] = q                               // 최소 비용 업데이트
+                    s[i, j] = k                               // 최적 분할 지점 저장
+    return m and s
+```
 
 
 
