--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -244,6 +244,7 @@ rMatrixChain(i, j)
 
 **시간 복잡도 : O(n³)**
 
+```ruby
 matrixChain(n)
 {
     for i ← 1 to n
@@ -258,6 +259,7 @@ matrixChain(n)
 
     return m[1, n];
 }
+```
 
 <br/>
 
