--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -282,10 +282,19 @@ Matrix-Chain-Order(p, n)
     return m and s
 ```
 
+<br/>
 
+## 9주차 (중간부터 다시 공부)
 
+### 최장 공통 부분 순서
 
+**최장 공통 부분 순서** : 두 문자열에 공통적으로 들어있는 공통 부분순서 중 가장 긴 것을 찾는 문제
 
+![image](https://github.com/user-attachments/assets/75cb6f92-be93-41dd-a1f2-b882e09b78fc)
+
+### 최장 공통 부분 순서 증명
+
+![image](https://github.com/user-attachments/assets/7900cc46-f0d3-4a6c-8e82-64a90cb5d8c0)
 
 
 
