--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -296,11 +296,52 @@ Matrix-Chain-Order(p, n)
 
 ![image](https://github.com/user-attachments/assets/7900cc46-f0d3-4a6c-8e82-64a90cb5d8c0)
 
+<br/>
+
+## 10주차 
+
+### 그래프
+
+그래프 : 정점(vertex) 및 간선(edge)로 이루어진 자료구조
+
+<br/>
+
+### 그래프 종류 
+
+- **Simple Graph** : 방향 x, 
+
+- **Weighted Graph** : 방향 x, 가중치 o
+
+- **Directed Graph** : 방향 o, 
+
+- **Weighted Directed Graph** : 방향 o, 가중치 o
+
+<br/>
 
 
+### 인접 행렬 (Adjacency Matrix)
 
+- **인접 행렬** : 𝑁이 정점의 총 수를 나타낼 때, 𝑁×𝑁로 그래프를 표현한 것
 
+- 장점: 빠른 간선 여부 판단 (Θ(1))
 
+- 단점: 공간 비효율적 (Θ(n²))
+
+- **스케일 프리 네트워크** (대부분 원소가 0으로 이루어진 현상)
+
+- **간선의 밀도가 높을 때 유용**
+
+<br/>
+
+### 인접 리스트 (Adjacency List)
+
+- **인접 리스트** : N개의 연결 리스트로 각 정점에서 시작하는 간선들을 표현하는 것을 의미
+
+- **장점** : 공간 효율적
+
+- **단점** : 특정 간선 탐색 시 Θ(n) 가능
+
+- **간선의 밀도가 낮을 때 유용**
 
 
 
