--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -323,9 +323,9 @@ Matrix-Chain-Order(p, n)
 
 - **인접 행렬** : 𝑁이 정점의 총 수를 나타낼 때, 𝑁×𝑁로 그래프를 표현한 것
 
-- 장점: 빠른 간선 여부 판단 (Θ(1))
+- **장점**: 빠른 간선 여부 판단 (Θ(1))
 
-- 단점: 공간 비효율적 (Θ(n²))
+- **단점**: 공간 비효율적 (Θ(n²))
 
 - **스케일 프리 네트워크** (대부분 원소가 0으로 이루어진 현상)
 
