--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -327,7 +327,7 @@ Matrix-Chain-Order(p, n)
 
 - **단점**: 공간 비효율적 (Θ(n²))
 
-- **스케일 프리 네트워크** (대부분 원소가 0으로 이루어진 현상)
+- **스케일 프리 네트워크** (특정 노드(허브, Hub)들이 매우 많은 연결을 가지며, 대부분의 다른 노드들은 몇 개의 연결만 가지는 네트워크 구조)
 
 - **간선의 밀도가 높을 때 유용**
 
@@ -337,17 +337,45 @@ Matrix-Chain-Order(p, n)
 
 - **인접 리스트** : N개의 연결 리스트로 각 정점에서 시작하는 간선들을 표현하는 것을 의미
 
-- **장점** : 공간 효율적
+- **장점** : **메모리 사용량 측면**에서는 인접 행렬보다 **효율적**
 
-- **단점** : 특정 간선 탐색 시 Θ(n) 가능
+- **단점** : 특정 간선 탐색 시 Θ(n) 가능 -> **worst case**
 
 - **간선의 밀도가 낮을 때 유용**
 
+<br/>
 
+### 그래프 순회 (Graph Traversal)
 
+**그래프 순회** : 그래프 내의 모든 정점을 한번씩 방문하는 연산을 의미
 
+- **BFS (Breadth-First Search)** : 너비 우선 탐색
 
+- **DFS (Depth-First Search, DFS)** : 깊이 우선 탐색
 
+<br/>
+
+### 너비 우선 탐색 (BFS, Breadth-First Search)
+
+**너비 우선 탐색 (BFS, Breadth-First Search)** : 루트 노드(혹은 다른 임의의 노드)에서 시작해서 인접한 노드를 먼저 탐색하는 방법
+
+- **선입선출(FIFO) 원칙**
+
+- **BFS 시간복잡도 : Θ(|V|+|E|) (V: 정점 수, E: 간선 수)**
+
+- 재귀적으로 동작하지 않는다
+
+- **큐(Queue)를 사용**
+
+<br/>
+
+### BFS 과정 
+
+- ![IMG_3198](https://github.com/user-attachments/assets/64a402a1-993e-412a-b98b-f909a6fe0eff)
+
+<br/>
+
+![IMG_3199 (1)](https://github.com/user-attachments/assets/47a6f9f0-23d5-4e3f-a0f7-7f422fc9d4aa)
 
 
 
