--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -377,8 +377,32 @@ Matrix-Chain-Order(p, n)
 
 ![IMG_3199 (1)](https://github.com/user-attachments/assets/47a6f9f0-23d5-4e3f-a0f7-7f422fc9d4aa)
 
+<br/>
+
+### 너비 우선 탐색 (BFS) 시간복잡도
+
+**정점 기준**
+
+for each v ∈ V - {s}: 모든 정점을 NO로 초기화 → O(|V|)
+
+이후 큐에 삽입하고, 다시 꺼낼 때까지 각 정점을 한 번만 처리한다
+
+결과적으로 2|V|만큼 시행되므로 정점 개수 만큼 시간 복잡도는 O(|V|) 이다 (상수 무시)
+
+<br/>
+
+**간선 기준**
+
+BFS는 각 정점 u의 인접 리스트 L(u)를 순회한다
+
+인접한 모든 정점을 확인할 때, 간선을 한 번씩만 탐색한다
+
+무방향 그래프일 경우, 각 간선은 양쪽에서 참조하므로 정확히 두 번 탐색한다
+
+결과적으로 2|E|만큼 시행되므로 간선 기준 시간복잡도는 O(|E|) 이다 (상수 무시)
 
 
+따라서 **O(∣V∣) + O(∣E∣) = O(∣V∣+∣E∣)** 이다
 
 
 
