--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -404,14 +404,27 @@ BFS는 각 정점 u의 인접 리스트 L(u)를 순회한다
 
 따라서 **O(∣V∣) + O(∣E∣) = O(∣V∣+∣E∣)** 이다
 
+<br/>
 
+### 깊이 우선 탐색 (DFS, Depth-First Search)
 
+**깊이 우선 탐색 (DFS, Depth-First Search)** : 루트 노드(혹은 다른 임의의 노드)에서 시작해서 다음 분기(branch)로 넘어가기 전에 해당 분기를 완벽하게 탐색하는 방법
 
+- **DFS 시간복잡도 : Θ(|V|+|E|) (V: 정점 수, E: 간선 수)**
 
+- 자기 자신을 호출하는 순환 알고리즘의 형태를 지님
 
+<br/>
 
+### DFS 과정
 
+![스크린샷 2025-05-15 112510](https://github.com/user-attachments/assets/849d929f-56c9-407a-b75e-a5f5297458eb)
 
+<br/>
+
+![스크린샷 2025-05-15 122616](https://github.com/user-attachments/assets/159375a5-6db9-487b-a174-ed7f8bcf2dfc)
+
+![스크린샷 2025-05-15 122623](https://github.com/user-attachments/assets/0f4ca786-450b-418f-8ebf-a372afa6a58a)
 
 
 
