--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -426,6 +426,25 @@ BFS는 각 정점 u의 인접 리스트 L(u)를 순회한다
 
 ![스크린샷 2025-05-15 122623](https://github.com/user-attachments/assets/0f4ca786-450b-418f-8ebf-a372afa6a58a)
 
+<br/>
+
+### DFS 알고리즘 
+
+```ruby
+DFS(G) {
+    for each v ∈ V
+        visited[v] ← NO; // 모든 정점을 방문하지 않은 상태로 초기화
+    
+    for each v ∈ V
+        if (visited[v] = NO) then aDFS(v); // 방문하지 않은 정점에 대해 aDFS 실행
+}
+
+aDFS(v) {
+    visited[v] ← YES;       // 정점 v를 방문했다고 표시
+    for each x ∈ L(v)       // v의 인접 리스트에 있는 모든 노드 x에 대해
+        if (visited[x] = NO) then aDFS(x); // 방문하지 않았다면 재귀 호출
+}
+```
 
 
 
