--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -446,9 +446,21 @@ aDFS(v) {
 }
 ```
 
+<br/>
 
+### 신장 트리 & 최소 신장 트리
 
+**트리 (Tree)** : **싸이클이 없는 연결된 무방향** 그래프
 
+- n개의 정점을 가지면 **반드시 n-1개의 간선을 가진다** (n-1 초과이면 **싸이클이 생김**)
+
+- 모든 정점이 연결되어 있으며, **하나의 경로만 존재**한다
+
+<br/>
+
+### 그래프 G의 신장 트리 (Spanning tree)
+
+무방향 연결 그래프 G에서 모든 정점을 포함하면서 **사이클 없이 최소 간선만**으로 이루어진 트리
 
 
 
