--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -460,31 +460,17 @@ aDFS(v) {
 
 ### 그래프 G의 신장 트리 (Spanning tree)
 
-무방향 연결 그래프 G에서 모든 정점을 포함하면서 **사이클 없이 최소 간선만**으로 이루어진 트리
+무방향 연결 그래프 G에서 **모든 정점을 포함하면서 사이클 없이 최소 간선만**으로 이루어진 트리
 
+![스크린샷 2025-05-15 124943](https://github.com/user-attachments/assets/5bf2435b-59ac-4a20-8dfc-d9fb4898c600)
 
+<br/>
 
+### 최소 신장 트리
 
+**최소 신장 트리** : 신장 트리들 중 **간선의 합이 최소**인 신장 트리
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+![image](https://github.com/user-attachments/assets/f17a69b9-5bd4-404e-8b89-4af65e6fc81b)
 
 
 
