--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -402,6 +402,11 @@ void aDFS(v, List result) {
 
 ![스크린샷 2025-05-15 124943](https://github.com/user-attachments/assets/5bf2435b-59ac-4a20-8dfc-d9fb4898c600)
 
+트리와 신장 트리의 개념은 유사하지만, 의미적 차이가 존재한다 
+
+트리는 싸이클이 없는 무방향 그래프 자체를 말하고 
+
+신장트리는 예를 들어 G라는 그래프는 싸이클이 존재하는 그래프라고 가정하자. 이때 어떠한 간선을 연결하면, 모든 정점을 포함하면서 싸이클이 없는 최소 간선을 만들 수 있는가를 보는 것이다. 이렇게 만들어진 트리가 그래프 G의 신장 트리이다 
 <br/>
 
 **최소 신장 트리** : 신장 트리들 중 **간선의 합이 최소**인 신장 트리
