--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -466,18 +466,37 @@ aDFS(v) {
 
 <br/>
 
-### 최소 신장 트리
+### 최소 신장 트리(MST)
 
 **최소 신장 트리** : 신장 트리들 중 **간선의 합이 최소**인 신장 트리
 
 ![image](https://github.com/user-attachments/assets/f17a69b9-5bd4-404e-8b89-4af65e6fc81b)
 
+<br/>
 
+## 11주차 
 
+### 그래프 종류 
 
+프림 알고리즘 : MST 구하는 알고리즘 중 하나, 정점을 **기준으로 가장 가까운 정점을 추가**하는 방식
 
+크루스칼 알고리즘
 
+위상정렬
 
+<br/>
+
+### 프림 알고리즘
+
+**프림 알고리즘** : MST(최소 신장 트리)를 구하는 알고리즘의 일종이며, 첫 정점을 시작으로 가장 가까운 이웃들을 추가해나가며 만들어 나간다
+
+![스크린샷 2025-05-18 111842](https://github.com/user-attachments/assets/f81f585e-4d14-4ec2-b1f9-e2838c3b22ec)
+
+![스크린샷 2025-05-18 111855](https://github.com/user-attachments/assets/f699d4a2-bc16-48c0-995f-18f1f9863e89)
+
+![스크린샷 2025-05-18 111904](https://github.com/user-attachments/assets/0401144b-db32-4f78-babe-36db707e83d8)
+
+![스크린샷 2025-05-18 111916](https://github.com/user-attachments/assets/02ed4890-52df-4292-bf99-f1d727bd7863)
 
 
 
