--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -498,8 +498,34 @@ aDFS(v) {
 
 ![스크린샷 2025-05-18 111916](https://github.com/user-attachments/assets/02ed4890-52df-4292-bf99-f1d727bd7863)
 
+<br/>
 
+### 프림 알고리즘 구현 
 
+```ruby
+Prim(G, r)
+▷ G=(V, E): 주어진 그래프
+▷ r: 시작으로 삼을 정점
+{
+    S ← ∅                           ▷ S : MST에 포함된 정점들의 집합
+    for each u ∈ V                  ▷ V : 전체 노드 집합 
+        dₓ ← ∞ ;                     ▷ 시작 정점을 제외한 모든 정점의 거리를 임의의 큰 수로 초기화
+    dᵣ ← 0 ;                         ▷ 시작 정점은 0으로 초기화
+    
+    while (S ≠ V) {                  ▷ n회 순환 (모든 정점이 MST에 포함되지 않을 때까지 반복)     
+        u ← extractMin(V - S, d);
+        S ← S ∪ {u};
+        
+        for each v ∈ L(u)           ▷ L(u) : u로부터 연결된 정점들의 집합
+            if (v ∈ V - S and wᵤᵥ < dᵥ) then dᵥ ← wᵤᵥ;          ▷ v ∈ V - S : v가 아직 MST 집합 S에 포함되지 않은 정점, 
+    }                                                            ▷ wᵤᵥ < dᵥ u에서 v로 가는 간선의 가중치가 v로의 최소 거리보다 작은지 비교 
+}
+
+extractMin(Q, d)
+{
+    ▷ 집합 Q에서 d값이 가장 작은 정점 u를 리턴한다;
+}
+```
 
 
 
