--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -476,14 +476,19 @@ aDFS(v) {
 
 ## 11주차 
 
-### 그래프 종류 
+### MST(최소 신장 트리) 알고리즘 종류 정리 
 
-프림 알고리즘 : MST 구하는 알고리즘 중 하나, 정점을 **기준으로 가장 가까운 정점을 추가**하는 방식
+프림 알고리즘 : 정점을 **기준으로 가장 가까운 정점을 추가**하는 방식
 
-크루스칼 알고리즘
+크루스칼 알고리즘 : 오름차순 정렬 후 **N-1번 반복하여 싸이클이 생기지 않으면** 간선을 선택
 
 위상정렬
 
+<br/>
+
+### 시간 복잡도 정리 
+
+프림 알고리즘 :  O(|E|log|V|)
 <br/>
 
 ### 프림 알고리즘
@@ -527,10 +532,53 @@ extractMin(Q, d)
 }
 ```
 
+<br/>
 
+### 프림 알고리즘 시간 복잡도 : O(|E|log|V|)
 
+**step 1 : 정점 선택 (extractMin)**
 
+Prim 알고리즘에서는 가장 작은 비용의 간선을 찾기 위해 Heap을 사용한다
 
+이 과정에서 매번 extractMin 연산이 일어난다
 
+Heap 자료구조에서 최소값을 찾는 연산은 **O(log V)**의 시간 복잡도가 걸리고 모든 정점을 순회하기 때문에, V번 실행
 
+따라서, 이 단계의 시간 복잡도는 O(V⋅logV)이다
+
+<br/>
+
+**step 2 : 간선 업데이트 (Relaxation)**
+
+Prim 알고리즘의 매 단계에서 현재 선택된 정점과 연결된 모든 간선을 탐색한다
+
+간선의 개수는 최대로 E개가 될 수 있다
+
+각각의 간선 탐색에서 우선순위 큐를 업데이트하면, **시간복잡도는 O(E⋅logV)** 이다
+
+<br/>
+
+**step 3 : 최종 계산**
+
+일반적으로 간선의 수(E) 가 정점의 수(V) 보다 많으므로
+
+O(VlogV) + O(ElogV) ≈ O(ElogV) 이다
+
+<br/>
+
+### 크루스칼 알고리즘
+
+**크루스칼 알고리즘** : 프림 알고리즘과는 다르게 트리 하나를 키워가는 방식이 아니라 노드 하나로 구성된 n개의 트리에서 점점 합쳐나가며 최종적으로 MST를 만드는 방식
+
+오름차순 정렬 -> 싸이클이 생기지 않으면 간선 선택 -> 이것을 N-1번 반
+
+![스크린샷 2025-05-18 123042](https://github.com/user-attachments/assets/97add176-0c84-41c8-a27d-0acc8eb6ca85)
+
+![스크린샷 2025-05-18 123057](https://github.com/user-attachments/assets/9fe9c485-f940-4b65-95ed-8410a81701d8)
+
+![스크린샷 2025-05-18 123103](https://github.com/user-attachments/assets/757ed08c-6e00-463d-9805-bf16069b83ed)
+
+![스크린샷 2025-05-18 123110](https://github.com/user-attachments/assets/4d3878bd-7516-427b-84af-d92d8d380580)
+
+![스크린샷 2025-05-18 123122](https://github.com/user-attachments/assets/99964fde-94d3-4744-b9c1-e9e6b8559bc4)
 
