--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -476,19 +476,22 @@ aDFS(v) {
 
 ## 11주차 
 
-### MST(최소 신장 트리) 알고리즘 종류 정리 
+### 알고리즘 종류 정리 
 
-프림 알고리즘 : 정점을 **기준으로 가장 가까운 정점을 추가**하는 방식
+**프림 알고리즘** : 정점을 **기준으로 가장 가까운 정점을 추가**하는 방식 (MST(최소 신장 트리) 구하는 알고리즘 중 하나) 
 
-크루스칼 알고리즘 : 오름차순 정렬 후 **N-1번 반복하여 싸이클이 생기지 않으면** 간선을 선택
+**크루스칼 알고리즘** : 오름차순 정렬 후 **N-1번 반복하여 싸이클이 생기지 않으면** 간선을 선택 (MST(최소 신장 트리) 구하는 알고리즘 중 하나) 
 
-위상정렬
+**위상정렬** : 진입 간선이 없는 정점 선택 -> 정점을 따라가다 더이상 진출 간선이 없는 정점 발견 -> 처음부터 순서대로 배열에 넣음
 
 <br/>
 
 ### 시간 복잡도 정리 
 
-프림 알고리즘 :  O(|E|log|V|)
+프림 알고리즘 : O(ElogV)
+
+크루스칼 알고리즘 : O(ElogV)
+
 <br/>
 
 ### 프림 알고리즘
@@ -581,4 +584,67 @@ O(VlogV) + O(ElogV) ≈ O(ElogV) 이다
 ![스크린샷 2025-05-18 123110](https://github.com/user-attachments/assets/4d3878bd-7516-427b-84af-d92d8d380580)
 
 ![스크린샷 2025-05-18 123122](https://github.com/user-attachments/assets/99964fde-94d3-4744-b9c1-e9e6b8559bc4)
+
+<br/>
+
+### 크루스칼 알고리즘 시간복잡도 
+
+![IMG_3243](https://github.com/user-attachments/assets/9b3a9faf-0d7d-4c96-9a1e-1076c8911850)
+
+<br/>
+
+### 위상정렬
+
+**위상 정렬** 싸이클이 없는 유향 그래프에서 정의되는 문제이다 모든 정점을 정렬하되 아래와 같은 조건을 만족하여야 함
+
+진입 간선이 없는 정점 선택 -> 정점을 따라가다 더이상 진출 간선이 없는 정점 발견 -> 처음부터 순서대로 배열에 넣음
+
+<br/>
+
+### 원래는 진입 차수 0부터 시작하는게 일반적임 
+
+![IMG_3246](https://github.com/user-attachments/assets/18f3c77e-98fd-4b8d-9dd9-7acda48cc55e)
+
+![스크린샷 2025-05-18 220641](https://github.com/user-attachments/assets/cc8c6f87-a498-44ed-8520-e93b3cfb1ba9)
+
+![스크린샷 2025-05-18 220647](https://github.com/user-attachments/assets/9d508753-acd2-4b87-a4fb-764096f3ff4c)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
