--- a/기말 정리본.md
+++ b/기말 정리본.md
@@ -492,6 +492,8 @@ aDFS(v) {
 
 크루스칼 알고리즘 : O(ElogV)
 
+위상정렬 : Θ(V+E)
+
 <br/>
 
 ### 프림 알고리즘
@@ -609,7 +611,54 @@ O(VlogV) + O(ElogV) ≈ O(ElogV) 이다
 
 ![스크린샷 2025-05-18 220647](https://github.com/user-attachments/assets/9d508753-acd2-4b87-a4fb-764096f3ff4c)
 
+<br/>
 
+### 위상 정렬 알고리즘 구현
+
+**시간 복잡도 : Θ(V+E)**
+
+```ruby
+topologicalSort2(G) 
+{ 
+    for each v∈V
+        visited[v] ← NO; 
+    for each v∈V                                ▷ 정점의 순서는 무관 
+        if (visited[v] = NO) then DFS-TS(v) ;
+ } 
+DFS-TS(v)  
+{ 
+    visited[v] ← YES; 
+    for each x∈L(v)                             ▷ L(v): v의 인접 리스트 
+        if (visited[x] = NO) then DFS-TS(x) ;
+    연결 리스트 R의 맨 앞에 정점 v를 삽입한다;
+ }
+```
+
+<br/>
+
+### 위상 정렬 시간복잡도 Θ(V+E)
+
+위상 정렬은 다음의 두 가지 주요 단계로 이루어진다
+
+**1. 진입 차수가 0인 정점 찾기 (V번 반복)**
+
+모든 정점(노드)을 한 번씩 방문하면서, 진입 차수가 0인 노드를 찾는다
+
+이 과정은 V개의 정점을 검사하므로 O(V) 시간이 걸린다
+
+<br/>
+
+***2. 간선 제거 (E번 반복)**
+
+정점을 제거하면서, 그 정점에서 나가는 모든 간선을 제거한다
+
+최악의 경우 모든 간선을 다 탐색해야 하므로 O(E) 시간이 걸린다
+
+<br/>
+
+**3. 최종 시간 복잡도**
+
+두 단계의 시간 복잡도를 더하면: O(V) + O(E) = O(V+E)
 
 
 
