Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -1,1 +1,143 @@
-### 123
+## 12 주차 
+
+### 알고리즘 종류 정리
+
+**프림 알고리즘** : 정점을 기준으로 **가장 가까운 정점을 추가**하는 방식 (MST(최소 신장 트리) 구하는 알고리즘 중 하나)
+
+**크루스칼 알고리즘** : **오름차순** 정렬 후 **N-1번 반복하여 싸이클이 생기지 않으면** 간선을 선택 (MST(최소 신장 트리) 구하는 알고리즘 중 하나)
+
+**위상정렬** : **진입 간선**이 없는 정점 선택 -> 정점을 따라가다 더이상 **진출 간선**이 없는 정점 발견 -> 처음부터 순서대로 배열에 넣음
+
+**강연결 요소** : **DFS로 각 정점 v의 완료시간 f[v]** 를 계산 후 **간선을 역방향으로 전환**하여 f[v]이 가장 많이 소요된(가장 큰) 정점에서 시작
+
+<br/>
+
+### 시간 복잡도 정리
+
+프림 알고리즘 : O(ElogV)
+
+크루스칼 알고리즘 : O(ElogV)
+
+위상정렬 : Θ(V+E)
+
+<br/>
+
+### 시간 복잡도 정리
+
+프림 알고리즘 : O(ElogV)
+
+크루스칼 알고리즘 : O(ElogV)
+
+위상정렬 : Θ(V+E)
+
+<br/>
+
+### 그래프 종류
+
+Simple Graph : 방향 x,
+
+Weighted Graph : 방향 x, 가중치 o
+
+Directed Graph : 방향 o,
+
+Weighted Directed Graph : 방향 o, 가중치 o
+
+<br/>
+
+### 강연결 요소
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
