Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -46,9 +46,18 @@ Weighted Directed Graph : 방향 o, 가중치 o
 
 ### 강연결 요소
 
+**강연결 요소** : 그래프 전체 대신 **강하게 연결된 부분 그래프**를 의미
 
+**강하게 연결 = 양방향 경로 존재**
 
+<br/>
 
+### 강연결 요소 과정 
+
+DFS -> 간선 역으로 전환 -> 수행 시간 f[v]가 가장 큰 정점에서 다시 DFS 시작
+![IMG_3262](https://github.com/user-attachments/assets/33fcb0f3-2bbc-4940-8310-98eb5be1136b)
+
+![IMG_3261](https://github.com/user-attachments/assets/b94c61de-d3a4-423c-8ad5-7d65d36d15e7)
 
 
 
